syntax = "proto3";

import "eraftpb.proto";

service KvService {
    rpc Get(GetReq) returns (GetReply) {}
    rpc Put(PutReq) returns (PutReply) {}
    rpc ChangeConfig(eraftpb.ConfChange) returns(ChangeReply) {}
}

service RaftService {
    rpc SendMsg(eraftpb.Message) returns(Null) {}
    rpc SendAddress(AddressState) returns(Null) {}
}

enum State {
    OK = 0;
    WRONG_LEADER = 1;
    NOT_FOUND = 2;
    IO_ERROR = 3;
}

message Null {}

message GetReq {
    string key = 1;
    uint64 client_id = 2;
}

message AddressState {
    string address_map = 1;
}

message GetReply {
    State state = 1;
    string value = 2;
    string address_map = 3;
}

message PutReq {
    string key = 1;
    string value = 2;
    uint64 client_id = 3;
}

message PutReply {
    State state = 1;
    string address_map = 2;
}

message ChangeReply {
    State state = 1;
    string address_map = 2;
}